--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -1,79 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>{% block title %}{% endblock %} - squareBracket Next</title>
-		{% block head %}{% endblock %}
-		<link rel="stylesheet" href="assets/css/style.css" type="text/css">
-		<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-		<script src="assets/common.js"></script>
-		<script>
-			subscribe_string = '{{ __("Follow") }}';
-			unsubscribe_string = '{{ __("Unfollow") }}';
-		</script>
-		<style>
-		</style>
-		{% block customcss %}{% endblock %}
-	</head>
-	<body>
-		<div id="masthead-container">
-			<div id="masthead">
-				<a href="../" id="logo-container">
-				<img id="logo" src="../assets/logo-masthead.png">
-				</a>
-				<div id="masthead-signin">
-					{% if log %}
-					<div style="display: flex;justify-content: center;align-items: center;gap: 5px;">{{ userdata.name }}<img class="rounded" style="width:32px;margin-top: -2px;" src="{{ profile_image(userdata.name) }}"  alt="{{ userdata.name }}"></div>
-					{% else %}
-					<a href="../login.php" class="button button-primary">Sign in</a>
-					{% endif %}
+<head>
+	<meta charset="utf-8">
+	<title>{% block title %}{% endblock %} - squareBracket Next</title>
+	{% block head %}{% endblock %}
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
+	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+	<script src="assets/common.js"></script>
+	<script>
+		subscribe_string = '{{ __("Follow") }}';
+		unsubscribe_string = '{{ __("Unfollow") }}';
+	</script>
+	<style>
+	</style>
+	{% block customcss %}{% endblock %}
+</head>
+<body>
+	<div id="masthead-container">
+		<div id="masthead">
+			<a href="/" id="logo-container"><img id="logo" src="assets/logo-masthead.png"></a>
+			<div id="masthead-signin">
+				{% if log %}
+				<div style="display: flex;justify-content: center;align-items: center;gap: 5px;">{{ userdata.name }}<img class="rounded" style="width:32px;margin-top: -2px;" src="{{ profile_image(userdata.name) }}"  alt="{{ userdata.name }}"></div>
+				{% else %}
+				<a href="../login.php" class="button button-primary">{{ __("Sign in") }}</a>
+				{% endif %}
+			</div>
+			<div id="masthead-content">
+				<class id="masthead-upload-button-group">
+					<a href="../upload_start.php" class="button button-secondary">{{ __("Upload") }}</a>
+				</class>
+				<form id="masthead-search" action="results.php">
+					<button id="search-btn" class="button button-secondary">
+					<span>{{ icon('search', 14) }}</span>
+					</button>
+					<div id="masthead-search-terms">
+						<label><input type="text" placeholder="{{ __("Search...") }}"></label>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	{% block precontent %}{% endblock %}
+	<div class="container">
+		<div class="grid">
+			<div class="col-2">
+				<div class="guide-channels-list">
+					<ul class="guide">
+						<li class="guide-channel">
+							<a href="/" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">Home</a>
+						</li>
+						<li class="guide-channel">
+							<a href="browse.php" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">Browse</a>
+						</li>
+					</ul>
 				</div>
-				<div id="masthead-content">
-					<class id="masthead-upload-button-group">
-						<a href="../upload_start.php" class="button button-secondary">Upload</a>
-					</class>
-					<form id="masthead-search" action="results.php">
-						<button id="search-btn" class="button button-secondary">
-						<span>{{ icon('search', 14) }}</span>
-						</button>
-						<div id="masthead-search-terms">
-							<label>
-							<input type="text" placeholder="Search..">
-							</label>
-						</div>
-					</form>
+			</div>
+			<div class="col-10">
+				<div class="container" style="margin-left: 0; padding: 0 70px 0 0;">
+					{% block content %}{% endblock %}
 				</div>
 			</div>
 		</div>
-		{% block precontent %}{% endblock %}
-		<div class="container">
-			<div class="grid">
-				<div class="col-2">
-					<div class="guide-channels-list">
-						<ul class="guide">
-							<li class="guide-channel">
-								<a href="/" class="guide-item"><img class="thumb" src="../assets/logo_square_icon.png">Home</a>
-							</li>
-							<li class="guide-channel">
-								<a href="browse.php" class="guide-item"><img class="thumb" src="../assets/logo_square_icon.png">Browse</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-10">
-					<div class="container" style="margin-left: 0; padding: 0 70px 0 0;">
-						{% block content %}{% endblock %}
-					</div>
-				</div>
-			</div>
+	</div>
+	<footer class="container">
+		<div class="footer">
+			<h3>squareBracket Beta 2 (squareBracket Next Preview)</h3>
+			<p><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
+			<h5>Git Commit <a href="https://github.com/gr-sb/squarebracket/commit/{{ git_commit(false) }}">{{ git_commit() }}</a><br></h5>
 		</div>
-		<footer class="container">
-			<div class="footer">
-				<h3>squareBracket Beta 2 (squareBracket Next Preview)</h3>
-				<p><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
-				<h5>Git Commit <a href="https://github.com/gr-sb/squarebracket/commit/{{ git_commit(false) }}">{{ git_commit() }}</a><br></h5>
-			</div>
-		</footer>
-	</body>
+	</footer>
+</body>
 </html>
