--- a/templates/sbnext-finalium/register.twig
+++ b/templates/sbnext-finalium/register.twig
@@ -8,14 +8,14 @@
 	<div class="alert alert-warning" role="alert">{{ error }}</div>
 {% endif %}
 <form method="post" name="loginForm" id="loginForm" action="register.php" class="form-signin">
-	<h2 class="form-signin-heading">Register</h2>
-	<input type="text" name="email" class="input-block-level" placeholder="Email">
+	<h2 class="form-signin-heading">{{ __("Register") }}</h2>
+	<input type="text" name="email" class="input-block-level" placeholder="Email") }}">
 
-	<input type="text" name="displayName" class="input-block-level" placeholder="Display Name">
-	<input type="text" name="username" class="input-block-level" placeholder="Username">
+	<input type="text" name="displayName" class="input-block-level" placeholder="{{ __("Display Name") }}">
+	<input type="text" name="username" class="input-block-level" placeholder="{{ __("Username") }}">
 
-	<input type="password" name="pass1" class="input-block-level" placeholder="Password">
-	<input type="password" name="pass2" class="input-block-level" placeholder="Password (Again)">
+	<input type="password" name="pass1" class="input-block-level" placeholder="{{ __("Password") }}">
+	<input type="password" name="pass2" class="input-block-level" placeholder="{{ __("Password (Again)") }}">
 
 	{% if hcaptcha_sitekey %}
 		<div class="form-floating my-2">
