localize more strings

--- a/templates/sbnext-finalium/resetpassword.twig
+++ b/templates/sbnext-finalium/resetpassword.twig
@@ -3,17 +3,17 @@
 {% block title %}Reset Password{% endblock %}
 
 	{% block content %}
-<h2>Reset Password</h2>
+<h2>{{ __("Reset Password") }}</h2>
 
-<p>Hello {{ resetdata.name }}. Please choose a new secure password, and be sure to remember it!</p>
+<p>{{ __("Hello %s. Please choose a new secure password, and be sure to remember it!", [resetdata.name]) }}</p>
 
 <form class="reglog" method="POST">
 	<p>
-		<span>New Password:</span>
+		<span>{{ __("New Password:") }}</span>
 		<input type="password" name="pass" size="25" maxlength="32">
 	</p>
 	<p>
-		<span>Repeat New Password:</span>
+		<span>{{ __("Repeat New Password:") }}</span>
 		<input type="password" name="pass2" size="25" maxlength="32">
 	</p>
 
