--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -49,10 +49,10 @@
 				<div class="guide-channels-list">
 					<ul class="guide">
 						<li class="guide-channel">
-							<a href="/" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">Home</a>
+							<a href="/" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">{{ __("Home") }}</a>
 						</li>
 						<li class="guide-channel">
-							<a href="browse.php" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">Browse</a>
+							<a href="browse.php" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">{{ __("Browse") }}</a>
 						</li>
 					</ul>
 				</div>
@@ -68,7 +68,7 @@
 		<div class="footer">
 			<h3>squareBracket Beta 2 (squareBracket Next Preview)</h3>
 			<p><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
-			<h5>Git Commit <a href="https://github.com/gr-sb/squarebracket/commit/{{ git_commit(false) }}">{{ git_commit() }}</a><br></h5>
+			<h5>{{ __("Git Commit") }} <a href="https://github.com/gr-sb/squarebracket/commit/{{ git_commit(false) }}">{{ git_commit() }}</a><br></h5>
 		</div>
 	</footer>
 </body>
