--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -77,7 +77,7 @@
 					<div class="button-group">
 						<button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" class="button button-secondary">
 							{{ icon("hand-thumbs-up-fill", 20) }}
-							Like
+							{{ __("Like") }}
 						</button>
 						<button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" data-tooltip="Dislike" class="button button-secondary tooltip tooltip-top">
 							{{ icon("hand-thumbs-down-fill", 20) }}
