--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -62,7 +62,13 @@
 							<a href="/" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">{{ __("Home") }}</a>
 						</li>
 						<li class="guide-channel">
-							<a href="browse.php" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">{{ __("Browse") }}</a>
+							<a href="browse.php" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">{{ __("Videos") }}</a>
+						</li>
+						<li class="guide-channel">
+							<a href="music.php" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">{{ __("Music") }}</a>
+						</li>
+						<li class="guide-channel">
+							<a href="/forum/" class="guide-item"><img class="thumb" src="/assets/logo_square_icon.png">{{ __("Forums") }}</a>
 						</li>
 					</ul>
 				</div>
@@ -76,7 +82,7 @@
 	</div>
 	<footer class="container">
 		<div class="footer">
-			<h3>squareBracket Beta 2 (squareBracket Next Preview)</h3>
+			<h3>squareBracket Beta 2</h3>
 			<p><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
 			<h5>{{ __("Git Commit") }} <a href="https://github.com/gr-sb/squarebracket/commit/{{ git_commit(false) }}">{{ git_commit() }}</a><br></h5>
 		</div>
