--- a/studio/templates/sbnext-finalium/_layout.twig
+++ b/studio/templates/sbnext-finalium/_layout.twig
@@ -7,6 +7,7 @@
 	<!-- bootstrap 3 (+ bs2-esque theme) -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+	<link rel="stylesheet" href="/studio/assets/dashboard.css">
 	
 	<!-- jquery and bootstrap 3 javascript -->
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -14,8 +15,8 @@
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-static-top">
-		<div class="container">
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 					<span class="sr-only">Toggle navigation</span>
@@ -23,7 +24,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.php">[squareBracket]</a>
+				<a class="navbar-brand" href="index.php">squareBracket Studio</a>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
@@ -32,20 +33,37 @@
 </svg> Home</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					{% if logged_in %}
-						<li><a href="#">{{ current_user.username }}</a></li>
+					{% if log %}
+						<li><a href="#">{{ userdata.name }}</a></li>
 						<li><a href="/upload.php">Upload</a></li>
 						<li><a href="#">Sign Off</a></li>
-					{% else %}
-						<li><a href="login.php">Login</a></li>
-						<li><a href="register.php">Register</a></li>
 					{% endif %}
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
 	</nav>
 	<div class="container">
-	<div class="alert alert-warning" role="alert">Welcome to squareBracket Studio! We haven't done shit.</div>
+	<div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+          <ul class="nav nav-sidebar">
+            <li class="active"><a href="#">Dashboard <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Comments</a></li>
+            <li><a href="#">Analytics</a></li>
+            <li><a href="#">Export</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="">Nav item</a></li>
+            <li><a href="">Nav item again</a></li>
+            <li><a href="">One more nav</a></li>
+            <li><a href="">Another nav item</a></li>
+            <li><a href="">More navigation</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="">Nav item again</a></li>
+            <li><a href="">One more nav</a></li>
+            <li><a href="">Another nav item</a></li>
+          </ul>
+        </div>
 		{% block content %}{% endblock %}
 	</div>
 </body>
