--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,16 +1,16 @@
 $threshold: 65%;
 $teal: #468aca;
-$red: #cc3333;
+$red: #993300;
 $white: #FCFCFC;
 $black: #000;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #e83e8c;
-$orange: #fd9814;
+$indigo: #4d27e6;
+$purple: #7942c1;
+$pink: #eb44b0;
+$orange: #ff9900;
 $yellow: #ffbf00;
 $cyan: #1778b8;
-$blue: #1b9ade;
-$green: #00b856;
+$blue: #1b8ade;
+$green: #559900;
 $poktube-blue: #0051b3;
 $aqua: #20c997;
 $primary: $blue;
@@ -24,9 +24,11 @@ $gray-200: #EEEEEE;
 $gray-250: #E8E8E8;
 $gray-300: #E2E2E2;
 $gray-400: #D3D3D3;
+$gray-450: #CCCCCC;
 $gray-500: #B4B4B4;
 $gray-650: #999999;
 $gray-600: #858585;
+$gray-650: #666666;
 $gray-700: #4F4F4F;
 $gray-800: #393939;
 $gray-900: #242424;
